# CmdPathtracer

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp  types.hpp
src/cli/: argparse.cpp  argparse.hpp
src/material/: dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  material.hpp  materialPool.cpp  materialPool.hpp  metal.cpp  metal.hpp
src/math/: ray.hpp  vector3.cpp  vector3.hpp
src/output/: bmpOutput.cpp  bmpOutput.hpp  bufferedOutput.cpp  bufferedOutput.hpp  imageOutput.hpp  ppmOutput.cpp  ppmOutput.hpp  tgaOutput.cpp  tgaOutput.hpp
src/scene/: hitable.hpp  movingSphere.cpp  movingSphere.hpp  sphere.cpp  sphere.hpp  world.cpp  world.hpp
src/sky/: blackSky.cpp  blackSky.hpp  gradientSky.cpp  gradientSky.hpp  sky.hpp
src/tracer/: camera.cpp  camera.hpp  raytracer.cpp  raytracer.hpp
src/world/: demo.cpp  demo.hpp  random.cpp  random.hpp  randomMotion.cpp  randomMotion.hpp  world.cpp  world.hpp
